cmake_minimum_required(VERSION 3.27)
project(Lab5___Assignment3___Sparse_Matrix)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        Lab5___Assignment3___Sparse_Matrix
        main.cpp
        ExtendedTest.h
        ExtendedTest.cpp
        Matrix.h
        Matrix.cpp
        ShortTest.h
        ShortTest.cpp
)
