cmake_minimum_required(VERSION 3.27)
project(Lab7___Assignment5___SortedSet)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab7___Assignment5___SortedSet
        main.cpp
        SortedSet.h
        SortedSet.cpp
        SortedSetIterator.h
        SortedSetIterator.cpp
        ShortTest.h
        ShortTest.cpp
        ExtendedTest.h
        ExtendedTest.cpp
)
